United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6990124 supplemental fix for 6361589
6990124 : supplemental fix for 6361589

Details
Type:
Bug
Submit Date:
2010-10-07
Status:
Closed
Updated Date:
2012-10-08
Project Name:
JDK
Resolved Date:
2010-10-14
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
6u21
Fixed Versions:
6u23

Related Reports
Backport:

Sub Tasks

Description
In 6361589 fix, if VMerror constructed with _thread assigned NULL, the following code could crash:
STEP(135, "(printing target Java thread stack)" )

     // printing Java thread stack trace if it is involved in GC crash
     if (_verbose && _thread->is_Named_thread()) { 

The correct should be:

STEP(135, "(printing target Java thread stack)" )

     // printing Java thread stack trace if it is involved in GC crash
     if (_verbose && _thread && (_thread->is_Named_thread())) {

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx19/baseline/rev/2b2e90b406ca
                                     
2010-10-08
EVALUATION

see description.
                                     
2010-10-07
SUGGESTED FIX

http://jpsesvr.sfbay.sun.com:8080/ctetools/html/ViewDetail.jsp?index=3767
                                     
2010-10-07



Hardware and Software, Engineered to Work Together