6990124: supplemental fix for 6361589 Reviewed-by: coleenp, chrisphi